// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`LongOperationIndicator (snapshot) > renders at ~5s elapsed (not slow) 1`] = `
<div
  aria-live="polite"
  class="fixed bottom-24 right-4 z-50 flex max-w-[90vw] items-center gap-3 rounded-lg border border-border bg-background/95 px-3 py-2 text-xs shadow-lg backdrop-blur sm:bottom-6 sm:max-w-sm"
  role="status"
>
  <div
    aria-label="Pensando…"
    class="thinking-status-loader inline-flex min-w-0 items-center gap-0"
    data-loader-chip="/loaders/pensando.svg"
    data-loader-src="/loaders/pensando.svg"
    data-pensando-bars="1"
    data-thinking-loader="pensando"
    style="color: var(--sira-celeste, #38BDF8);"
  >
    <span
      aria-hidden="true"
      class="flex shrink-0 items-center justify-center"
      style="width: 20px; height: 20px;"
    >
      <span
        aria-hidden="true"
        class="pointer-events-none select-none"
        data-loader-src="/loaders/pensando.svg"
        data-pensando-bars="1"
        style="display: inline-flex; line-height: 0;"
      >
        <div
          aria-label=""
          aria-live="polite"
          class="dmx-root dmx-matrix-3 dmx-dot-shape-circle"
          role="status"
          style="width: 11px; height: 11px; --dmx-speed: 0.5714285714285714; --dmx-dot-size: 3px; --dmx-halo-level: 0; --dmx-dot-fill: #38BDF8; color: rgb(56, 189, 248); --dmx-opacity-base: 0.06;"
        >
          <div
            class="dmx-grid"
            style="gap: 1px; grid-template-columns: repeat(3, minmax(0, 1fr)); grid-template-rows: repeat(3, minmax(0, 1fr));"
          >
            <span
              aria-hidden="true"
              class="dmx-dot dmx-ripple-echo-3"
              style="width: 3px; height: 3px; --dmx-distance: 1.4142135623730951; --dmx-row: 0; --dmx-col: 0; --dmx-x: -4px; --dmx-y: -4px; --dmx-angle: -2.356194490192345; --dmx-radius: 1; --dmx-manhattan: 2; --dmx-ripple-ring: 2; --dmx-ripple-parity: 0;"
            />
            <span
              aria-hidden="true"
              class="dmx-dot dmx-ripple-echo-3"
              style="width: 3px; height: 3px; --dmx-distance: 1; --dmx-row: 0; --dmx-col: 1; --dmx-x: 0px; --dmx-y: -4px; --dmx-angle: -1.5707963267948966; --dmx-radius: 0.7071067811865475; --dmx-manhattan: 1; --dmx-ripple-ring: 1; --dmx-ripple-parity: 1;"
            />
            <span
              aria-hidden="true"
              class="dmx-dot dmx-ripple-echo-3"
              style="width: 3px; height: 3px; --dmx-distance: 1.4142135623730951; --dmx-row: 0; --dmx-col: 2; --dmx-x: 4px; --dmx-y: -4px; --dmx-angle: -0.7853981633974483; --dmx-radius: 1; --dmx-manhattan: 2; --dmx-ripple-ring: 2; --dmx-ripple-parity: 0;"
            />
            <span
              aria-hidden="true"
              class="dmx-dot dmx-ripple-echo-3"
              style="width: 3px; height: 3px; --dmx-distance: 1; --dmx-row: 1; --dmx-col: 0; --dmx-x: -4px; --dmx-y: 0px; --dmx-angle: 3.141592653589793; --dmx-radius: 0.7071067811865475; --dmx-manhattan: 1; --dmx-ripple-ring: 1; --dmx-ripple-parity: 1;"
            />
            <span
              aria-hidden="true"
              class="dmx-dot dmx-ripple-echo-3"
              style="width: 3px; height: 3px; --dmx-distance: 0; --dmx-row: 1; --dmx-col: 1; --dmx-x: 0px; --dmx-y: 0px; --dmx-angle: 0; --dmx-radius: 0; --dmx-manhattan: 0; --dmx-ripple-ring: 0; --dmx-ripple-parity: 0;"
            />
            <span
              aria-hidden="true"
              class="dmx-dot dmx-ripple-echo-3"
              style="width: 3px; height: 3px; --dmx-distance: 1; --dmx-row: 1; --dmx-col: 2; --dmx-x: 4px; --dmx-y: 0px; --dmx-angle: 0; --dmx-radius: 0.7071067811865475; --dmx-manhattan: 1; --dmx-ripple-ring: 1; --dmx-ripple-parity: 1;"
            />
            <span
              aria-hidden="true"
              class="dmx-dot dmx-ripple-echo-3"
              style="width: 3px; height: 3px; --dmx-distance: 1.4142135623730951; --dmx-row: 2; --dmx-col: 0; --dmx-x: -4px; --dmx-y: 4px; --dmx-angle: 2.356194490192345; --dmx-radius: 1; --dmx-manhattan: 2; --dmx-ripple-ring: 2; --dmx-ripple-parity: 0;"
            />
            <span
              aria-hidden="true"
              class="dmx-dot dmx-ripple-echo-3"
              style="width: 3px; height: 3px; --dmx-distance: 1; --dmx-row: 2; --dmx-col: 1; --dmx-x: 0px; --dmx-y: 4px; --dmx-angle: 1.5707963267948966; --dmx-radius: 0.7071067811865475; --dmx-manhattan: 1; --dmx-ripple-ring: 1; --dmx-ripple-parity: 1;"
            />
            <span
              aria-hidden="true"
              class="dmx-dot dmx-ripple-echo-3"
              style="width: 3px; height: 3px; --dmx-distance: 1.4142135623730951; --dmx-row: 2; --dmx-col: 2; --dmx-x: 4px; --dmx-y: 4px; --dmx-angle: 0.7853981633974483; --dmx-radius: 1; --dmx-manhattan: 2; --dmx-ripple-ring: 2; --dmx-ripple-parity: 0;"
            />
          </div>
        </div>
      </span>
    </span>
  </div>
  <div
    class="flex min-w-0 flex-1 flex-col gap-0.5"
  >
    <span
      class="truncate font-medium text-foreground"
    >
      Generando…
    </span>
    <span
      class="text-muted-foreground"
    >
      5
      s
    </span>
  </div>
</div>
`;

exports[`LongOperationIndicator (snapshot) > renders at ~35s elapsed (slow state) 1`] = `
<div
  aria-live="polite"
  class="fixed bottom-24 right-4 z-50 flex max-w-[90vw] items-center gap-3 rounded-lg border border-border bg-background/95 px-3 py-2 text-xs shadow-lg backdrop-blur sm:bottom-6 sm:max-w-sm"
  role="status"
>
  <div
    aria-label="Pensando…"
    class="thinking-status-loader inline-flex min-w-0 items-center gap-0"
    data-loader-chip="/loaders/pensando.svg"
    data-loader-src="/loaders/pensando.svg"
    data-pensando-bars="1"
    data-thinking-loader="pensando"
    style="color: var(--sira-celeste, #38BDF8);"
  >
    <span
      aria-hidden="true"
      class="flex shrink-0 items-center justify-center"
      style="width: 20px; height: 20px;"
    >
      <span
        aria-hidden="true"
        class="pointer-events-none select-none"
        data-loader-src="/loaders/pensando.svg"
        data-pensando-bars="1"
        style="display: inline-flex; line-height: 0;"
      >
        <div
          aria-label=""
          aria-live="polite"
          class="dmx-root dmx-matrix-3 dmx-dot-shape-circle"
          role="status"
          style="width: 11px; height: 11px; --dmx-speed: 0.5714285714285714; --dmx-dot-size: 3px; --dmx-halo-level: 0; --dmx-dot-fill: #38BDF8; color: rgb(56, 189, 248); --dmx-opacity-base: 0.06;"
        >
          <div
            class="dmx-grid"
            style="gap: 1px; grid-template-columns: repeat(3, minmax(0, 1fr)); grid-template-rows: repeat(3, minmax(0, 1fr));"
          >
            <span
              aria-hidden="true"
              class="dmx-dot dmx-ripple-echo-3"
              style="width: 3px; height: 3px; --dmx-distance: 1.4142135623730951; --dmx-row: 0; --dmx-col: 0; --dmx-x: -4px; --dmx-y: -4px; --dmx-angle: -2.356194490192345; --dmx-radius: 1; --dmx-manhattan: 2; --dmx-ripple-ring: 2; --dmx-ripple-parity: 0;"
            />
            <span
              aria-hidden="true"
              class="dmx-dot dmx-ripple-echo-3"
              style="width: 3px; height: 3px; --dmx-distance: 1; --dmx-row: 0; --dmx-col: 1; --dmx-x: 0px; --dmx-y: -4px; --dmx-angle: -1.5707963267948966; --dmx-radius: 0.7071067811865475; --dmx-manhattan: 1; --dmx-ripple-ring: 1; --dmx-ripple-parity: 1;"
            />
            <span
              aria-hidden="true"
              class="dmx-dot dmx-ripple-echo-3"
              style="width: 3px; height: 3px; --dmx-distance: 1.4142135623730951; --dmx-row: 0; --dmx-col: 2; --dmx-x: 4px; --dmx-y: -4px; --dmx-angle: -0.7853981633974483; --dmx-radius: 1; --dmx-manhattan: 2; --dmx-ripple-ring: 2; --dmx-ripple-parity: 0;"
            />
            <span
              aria-hidden="true"
              class="dmx-dot dmx-ripple-echo-3"
              style="width: 3px; height: 3px; --dmx-distance: 1; --dmx-row: 1; --dmx-col: 0; --dmx-x: -4px; --dmx-y: 0px; --dmx-angle: 3.141592653589793; --dmx-radius: 0.7071067811865475; --dmx-manhattan: 1; --dmx-ripple-ring: 1; --dmx-ripple-parity: 1;"
            />
            <span
              aria-hidden="true"
              class="dmx-dot dmx-ripple-echo-3"
              style="width: 3px; height: 3px; --dmx-distance: 0; --dmx-row: 1; --dmx-col: 1; --dmx-x: 0px; --dmx-y: 0px; --dmx-angle: 0; --dmx-radius: 0; --dmx-manhattan: 0; --dmx-ripple-ring: 0; --dmx-ripple-parity: 0;"
            />
            <span
              aria-hidden="true"
              class="dmx-dot dmx-ripple-echo-3"
              style="width: 3px; height: 3px; --dmx-distance: 1; --dmx-row: 1; --dmx-col: 2; --dmx-x: 4px; --dmx-y: 0px; --dmx-angle: 0; --dmx-radius: 0.7071067811865475; --dmx-manhattan: 1; --dmx-ripple-ring: 1; --dmx-ripple-parity: 1;"
            />
            <span
              aria-hidden="true"
              class="dmx-dot dmx-ripple-echo-3"
              style="width: 3px; height: 3px; --dmx-distance: 1.4142135623730951; --dmx-row: 2; --dmx-col: 0; --dmx-x: -4px; --dmx-y: 4px; --dmx-angle: 2.356194490192345; --dmx-radius: 1; --dmx-manhattan: 2; --dmx-ripple-ring: 2; --dmx-ripple-parity: 0;"
            />
            <span
              aria-hidden="true"
              class="dmx-dot dmx-ripple-echo-3"
              style="width: 3px; height: 3px; --dmx-distance: 1; --dmx-row: 2; --dmx-col: 1; --dmx-x: 0px; --dmx-y: 4px; --dmx-angle: 1.5707963267948966; --dmx-radius: 0.7071067811865475; --dmx-manhattan: 1; --dmx-ripple-ring: 1; --dmx-ripple-parity: 1;"
            />
            <span
              aria-hidden="true"
              class="dmx-dot dmx-ripple-echo-3"
              style="width: 3px; height: 3px; --dmx-distance: 1.4142135623730951; --dmx-row: 2; --dmx-col: 2; --dmx-x: 4px; --dmx-y: 4px; --dmx-angle: 0.7853981633974483; --dmx-radius: 1; --dmx-manhattan: 2; --dmx-ripple-ring: 2; --dmx-ripple-parity: 0;"
            />
          </div>
        </div>
      </span>
    </span>
  </div>
  <div
    class="flex min-w-0 flex-1 flex-col gap-0.5"
  >
    <span
      class="truncate font-medium text-foreground"
    >
      Generando…
    </span>
    <span
      class="text-amber-600"
    >
      35
      s
       · está tardando más de lo habitual
    </span>
  </div>
</div>
`;
